tests/paczka1/fuzzy1/82945831.err
Error in line 5: GENdbzhLNAc A474 45,3
Error in line 10: 75k5 A180 4,4
Error in line 30: S415 A474 301,65
Error in line 14: S415 A474 82,6
Error in line 18: W1Kbt A474 38,7
Error in line 38: 75k5 A180 105,96
Error in line 36: 75k5 A180 35,8
